# adaptive-fraud-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fraud_detector/: __init__.py  comparison.py  data.py  drift_detection.py  pipeline.py  simulate.py
src/fraud_detector/api/: server.py
src/fraud_detector/dashboard/: app.py
tests/unit/: test_data.py  test_drift.py  test_pipeline.py
