[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-fraud-detector"
version = "0.1.0"
description = "Real-time adaptive fraud detection with online learning, concept drift detection, and auto-retraining"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Bruce Mukanzi", email = "mukanzibruce@users.noreply.github.com" },
]
keywords = ["machine-learning", "fraud-detection", "online-learning", "concept-drift", "streaming", "river"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "river>=0.21.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "structlog>=24.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.scripts]
fraud-api = "fraud_detector.api.server:main"
fraud-dashboard = "fraud_detector.dashboard.app:main"
fraud-simulate = "fraud_detector.simulate:main"

[project.urls]
Homepage = "https://github.com/mukanzibruce/adaptive-fraud-detector"
Documentation = "https://github.com/mukanzibruce/adaptive-fraud-detector/tree/main/docs"
Repository = "https://github.com/mukanzibruce/adaptive-fraud-detector"
Issues = "https://github.com/mukanzibruce/adaptive-fraud-detector/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
